# QtOpenAi

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: QtOpenAiConfig.cmake.in
examples/: CMakeLists.txt  tool_loop.cpp
src/client/: CMakeLists.txt
src/client/include/QtOpenAi/Client/: ChatCompletionAccumulator.h  ChatCompletionListReply.h  ChatCompletionMessageListReply.h  ChatCompletionReply.h  ChatCompletionStreamReply.h  Client.h  ClientError.h  CompletionReply.h  CompletionStreamReply.h  ConversationItemsReply.h  ConversationReply.h  EmbeddingReply.h  GlobalClient.h  ImageReply.h  ListParams.h  ModelListReply.h  ModelReply.h  ModerationReply.h  ResponseReply.h  ResponseStreamReply.h  RetryPolicy.h  SpeechReply.h  ToolRegistry.h  TranscriptionReply.h  VideoContentReply.h  VideoListReply.h  VideoPoller.h  VideoReply.h
src/client/src/: ChatCompletionAccumulator.cpp  ChatCompletionListReply.cpp  ChatCompletionMessageListReply.cpp  ChatCompletionReply.cpp  ChatCompletionStreamReply.cpp  Client.cpp  CompletionReply.cpp  CompletionStreamReply.cpp  ConversationItemsReply.cpp  ConversationReply.cpp  EmbeddingReply.cpp  HttpSupport_p.h  ImageReply.cpp  ModelListReply.cpp  ModelReply.cpp  ModerationReply.cpp  Multipart_p.h  ResponseReply.cpp  ResponseStreamReply.cpp  RestReply.cpp  RestReply_p.h  RetryPolicy.cpp  SpeechReply.cpp  SseParser_p.h  ToolRegistry.cpp  TranscriptionReply.cpp  VideoContentReply.cpp  VideoListReply.cpp  VideoPoller.cpp  VideoReply.cpp
src/core/: CMakeLists.txt
src/core/include/QtOpenAi/Core/: ChatCompletionChunk.h  ChatCompletionList.h  ChatCompletionRequest.h  ChatCompletionResponse.h  Choice.h  CompletionChoice.h  CompletionRequest.h  CompletionResponse.h  ContentPart.h  Conversation.h  ConversationItemList.h  CreateVideoRequest.h  EmbeddingRequest.h  EmbeddingResponse.h  Enums.h  FunctionCall.h  GlobalCore.h  ImageEditRequest.h  ImageGenerationRequest.h  ImageResponse.h  ImageVariationRequest.h  ListPage.h  Message.h  Model.h  ModerationRequest.h  ModerationResponse.h  Response.h  ResponseFormat.h  ResponseOutputItem.h  ResponseRequest.h  ResponseUsage.h  SpeechRequest.h  Tool.h  ToolCall.h  TranscriptionRequest.h  TranscriptionResponse.h  TranslationRequest.h  Usage.h  VideoJob.h
src/core/src/: ChatCompletionChunk.cpp  ChatCompletionRequest.cpp  ChatCompletionResponse.cpp  Choice.cpp  CompletionChoice.cpp  CompletionRequest.cpp  CompletionResponse.cpp  ContentPart.cpp  Conversation.cpp  ConversationItemList.cpp  CreateVideoRequest.cpp  EmbeddingRequest.cpp  EmbeddingResponse.cpp  Enums.cpp  FunctionCall.cpp  ImageEditRequest.cpp  ImageGenerationRequest.cpp  ImageResponse.cpp  ImageVariationRequest.cpp  JsonHelpers_p.h  Message.cpp  Model.cpp  ModerationRequest.cpp  ModerationResponse.cpp  Response.cpp  ResponseFormat.cpp  ResponseOutputItem.cpp  ResponseRequest.cpp  ResponseUsage.cpp  SpeechRequest.cpp  Tool.cpp  ToolCall.cpp  TranscriptionRequest.cpp  TranscriptionResponse.cpp  TranslationRequest.cpp  Usage.cpp  VideoJob.cpp
tests/: CMakeLists.txt
tests/client/: tst_completions.cpp  tst_conversations.cpp  tst_embeddings.cpp  tst_images.cpp  tst_moderations.cpp  tst_reply.cpp  tst_resilience.cpp  tst_responses.cpp  tst_speech.cpp  tst_storedcompletions.cpp  tst_streaming.cpp  tst_streaming_extra.cpp  tst_toolregistry.cpp  tst_transcriptions.cpp  tst_video.cpp
tests/core/: tst_chatrequestparams.cpp  tst_chunk.cpp  tst_completions.cpp  tst_conversations.cpp  tst_embeddings.cpp  tst_images.cpp  tst_liststore.cpp  tst_models.cpp  tst_moderations.cpp  tst_multimodal.cpp  tst_responseformat.cpp  tst_responses.cpp  tst_serialization.cpp  tst_speech.cpp  tst_transcriptions.cpp  tst_valuesemantics.cpp  tst_video.cpp
tests/package/: CMakeLists.txt  main.cpp
